<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="95dp"
        android:layout_height="23dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="103dp"
        android:text="@string/number1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="97dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="109dp"
        android:text="@string/number2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:text="@string/autofillnum2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="92dp"
        android:editable="false"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/autofillnum1"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/calculation"
        android:layout_width="185dp"
        android:layout_height="31dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="50dp"
        android:text="@string/calculation"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/minus"
        android:onClick="subcal"
        android:tint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:srcCompat="@drawable/remainder"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/multiply"
        android:onClick="mulcal"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/multiple" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="68dp"
        android:onClick="divcal"
        android:text="@string/devider_button"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/plus"
        android:onClick="addcal"
        android:tint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>